# LLM-Assignment

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: tests.yml
configs/: dedup.yaml  filters.yaml  sources.yaml
scripts/: build_final_dataset.py  compare_baselines.py  download_sources.py  generate.py  generate_report.py  inspect_sources.py  prepare_pretrain_data.py  prepare_pretrain_data_streaming.py  run_all_sources.py  run_dedup_datatrove.py  run_pilot.py  sweep_vocab_size.py  train.py  train_tokenizer.py  upload_to_hf.py  upload_tokenizer_to_hf.py
scripts/slurm/: 00_download_sources.sh  01_dedup_datatrove.sh  01_run_all_sources.sh  02_build_final.sh  03_upload.sh  04_train_tokenizer_fineweb2.sh  05_sweep_vocab_size_fineweb2.sh  06_prepare_pretrain_full.sh  07_pretrain.sh  _common.sh  pilot.sh
src/: aggregate.py  sources.py
src/dedup/: exact.py  minhash.py
src/filters/: clean.py  language.py  quality.py
src/ingest/: base.py  registry.py
src/ingest/adapters/: carolina.py  generic.py  hplt.py
src/model/: __init__.py  gpt.py  train.py
src/tokenizer/: data.py  eval.py  logging_utils.py  palette.py  report.py  train.py
tests/: test_aggregate.py  test_build_final_dataset.py  test_dedup.py  test_dedup_pipeline.py  test_filters.py  test_model.py  test_report.py  test_schema.py  test_tokenizer.py
