[tool.poetry]
name = "llm-und-pretrain"
version = "0.1.0"
description = "Task 1: preprocessing pipeline for PT/ES/HI pre-training data"
authors = ["Frank"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^3.0"
huggingface-hub = "^0.26"
pyarrow = "^17.0"
regex = "^2024.9.11"
pyyaml = "^6.0"
datasketch = "^1.6"
langid = "^1.1.6"
requests = "^2.32"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
