[project]
name = "llm-und-pretrain"
version = "0.1.0"
description = "Task 1: preprocessing pipeline for PT/ES/HI pre-training data"
authors = [{ name = "Frank" }]
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.0",
    "huggingface-hub>=0.26",
    "pyarrow>=17.0",
    "regex>=2024.9.11",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "requests>=2.32",
    "tokenizers==0.22.2",
    "transformers==5.13.0",
    "matplotlib>=3.9",
    "jinja2>=3.1",
    "kneed>=0.8.6",
    "datatrove>=0.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
